[gd_scene load_steps=10 format=3 uid="uid://xhvlothbeiv3"]

[ext_resource type="Script" uid="uid://xyt63uf0dhec" path="res://player/scripts/player.gd" id="1_oul6g"]
[ext_resource type="Script" uid="uid://cnkca5oudv41q" path="res://player/states/idle.gd" id="2_g1dw6"]
[ext_resource type="Script" uid="uid://di27br1stif06" path="res://player/states/run.gd" id="3_yw30f"]
[ext_resource type="Script" uid="uid://cm88ohjj31qbh" path="res://player/states/jump.gd" id="4_qjkh3"]
[ext_resource type="Script" uid="uid://dy1etofqqyhln" path="res://player/states/fall.gd" id="5_g6k8r"]
[ext_resource type="Script" uid="uid://6rbw4heukaew" path="res://player/states/crouch.gd" id="6_g6k8r"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kqu6x"]
size = Vector2(18, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6k8r"]
size = Vector2(16, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boad6"]
size = Vector2(16, 23)

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource("1_oul6g")

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("2_g1dw6")

[node name="Run" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("3_yw30f")

[node name="jump" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("4_qjkh3")

[node name="fall" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("5_g6k8r")
jump_buffer_time = 0.1

[node name="Crouch" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("6_g6k8r")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(0, -24)
texture = SubResource("PlaceholderTexture2D_kqu6x")

[node name="CollisionStand" type="CollisionShape2D" parent="."]
position = Vector2(0, -23)
shape = SubResource("RectangleShape2D_g6k8r")
debug_color = Color(0.65882355, 0.50980395, 0.1882353, 0.75686276)

[node name="CollisionCrouch" type="CollisionShape2D" parent="."]
position = Vector2(0, -11.5)
shape = SubResource("RectangleShape2D_boad6")
disabled = true
debug_color = Color(0.23419982, 0.6245921, 0.3590032, 0.75686276)

[node name="Label" type="Label" parent="."]
offset_left = -34.0
offset_top = -72.0
offset_right = 35.0
offset_bottom = -49.0
theme_override_font_sizes/font_size = 10
text = "State"
horizontal_alignment = 1

[node name="OneWayPlatformRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 4)
collision_mask = 2
